# aadr-subset

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/aadr_subset/: __init__.py  __main__.py  _cmd_helpers.py  api.py  cli.py  engine.py  errors.py  formats.py  reporting.py  selector.py  templates.py  types.py
src/aadr_subset/commands/: __init__.py  diff_cmd.py  inspect_cmd.py  report_cmd.py  select_cmd.py  template_cmd.py  validate_cmd.py
src/aadr_subset/schemas/: selector.schema.json
src/aadr_subset/templates/: bronze_age_europe.yaml  iron_age_britain.yaml  modern_european.yaml  neolithic_anatolia.yaml  viking_period_scandinavian.yaml  wsh_steppe_pool.yaml
tests/: conftest.py
tests/fixtures/: synthesize.py
tests/integration/: test_templates_against_real_anno.py
tests/unit/: test_api.py  test_coverage_column.py  test_cross_version.py  test_diff.py  test_engine.py  test_formats.py  test_formats_tsv_json.py  test_globs.py  test_inspect_cli.py  test_multi_anno.py  test_report_cli.py  test_report_writers.py  test_reporting.py  test_sampling.py  test_schema_validation.py  test_select_cli.py  test_selector_loader.py  test_semantic_constraints.py  test_signature_canonicalization.py  test_templates.py  test_validate_cli.py
