[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aadr-subset"
version = "0.2.0"
description = "Declarative AADR panel subsetting from YAML selectors; the missing first-class tool for cohort definitions in ancient-DNA / population-genetics workflows."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Carsten Erickson", email = "carstene@mailbox.org" },
]
keywords = ["bioinformatics", "genetics", "aadr", "ancient-dna", "admixtools", "population-genetics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
dependencies = [
    # aadr-resolve is the hard library dependency per HLD §aadr-resolve as a
    # library dependency. Tracking the 0.2.x line: 0.2.0 ships the
    # `MissingNativeFieldError`, `AnnoFrame.path`, and `resolve_master_ids`
    # APIs that aadr-subset relies on.
    "aadr-resolve>=0.2.0,<0.3",
    "pandas>=2.2,<3",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "jsonschema>=4.20",
    "click>=8.1,<9",
    "rfc8785>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-jsonschema>=4.0",
    "types-PyYAML>=6.0",
    "pandas-stubs>=2.2",
    "build>=1.2",
    "twine>=5.0",
]

[project.scripts]
aadr-subset = "aadr_subset.cli:main"

[project.urls]
Homepage = "https://github.com/carstenerickson/aadr-subset"
Issues = "https://github.com/carstenerickson/aadr-subset/issues"
Changelog = "https://github.com/carstenerickson/aadr-subset/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aadr_subset = ["py.typed", "schemas/*.json", "templates/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
# RUF003: ambiguous-unicode-in-comment. We intentionally use ∪ / × etc. for
# set-theory and matrix notation in test/code comments — these are clearer
# than the ASCII equivalents and don't affect runtime behavior.
ignore = ["RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
markers = [
    "slow: tests that take more than a few seconds",
    "integration: end-to-end tests requiring committed fixtures",
    "external_tool: tests requiring plink2 or pgen-samplebind on PATH",
]

[tool.coverage.run]
source = ["src/aadr_subset"]
omit = [
    # Orchestration shells (per LLD §1.5). Exercised by integration tests
    # via subprocess, where coverage in this process isn't measured.
    "src/aadr_subset/__main__.py",
    "src/aadr_subset/cli.py",
    "src/aadr_subset/commands/*",
]

[tool.coverage.report]
fail_under = 90
exclude_also = [
    # Defensive branches; not exercised by happy paths.
    "raise InvariantViolation",
    "except Exception",
    # Forward-compat fallbacks in _locate_node etc.
    "except.*:  # ?defensive",
]
